# llm-config

./: .gitignore  README.md  pyproject.toml
.bin/: prepare.bat  prepare.sh
.github/workflows/: release.yml
src/llm_config/: __init__.py
