[project]
name = "llm-config"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mathewgeola", email = "mathewgeola@gmail.com" }
]
requires-python = ">=3.12.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
